<resources>
    <string name="app_name">NMIMSGO</string>
    <string name="nmimslogo">nmimslogo</string>

    <string name="made">Made By: Gaurav, </string>
    <string name="s">Swarup and Kartik</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login1">Login</string>
    <string name="forgetpass">Forgot Password?</string>
    <string name="auser">Already A User? Signin</string>
    <string name="settings">settings</string>

    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="notre">Not yet registered? Sign Up</string>
    <string name="wc">Welcome</string>
    <string name="intro">Navigate your campus effortlessly with our intuitive app, designed to help you find your way to classes, facilities, and events in real-time</string>
    <string name="name">NMIMS Navigation System</string>
    <string name="gm">WELCOME</string>
    <string name="nearby">Route finder</string>
    <string name="weather">Weather</string>
    <string name="map">Map</string>
    <string name="lrs">Locate Venue</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="enteremail">Enter your email address:</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>


    <string name="head1">NMIMS GUIDE</string>
    <string name="inp1">Starting Point</string>
    <string name="inp2">Destination Point</string>
    <string name="Start">Start</string>
    <string name="hint1">Enter Starting Point</string>
    <string name="hint2">Enter Destination Point</string>


    <string name="tandc">Terms and Conditions</string>
    <string name="contact">Contact</string>
    <string name="lg">logout</string>

    <string name="ContactUs">Contact Us</string>
    <string name="write">We would love to hear from you! Please reach out with any questions or feedback.</string>
    <string name="ContactUss">contact us</string>
    <string name="ContactUsss">contact us</string>

    <string name="Phoneno">Phone No:</string>
    <string name="pno">7066559992</string>
    <string name="emaill">Email:</string>
    <string name="em"> enquiry@nmims.edu</string>

    <string name="mess">Mess Menu</string>


</resources>