<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/dialogForgot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_btn_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotTitle"
            android:text="@string/forgetpass"
            android:padding="10dp"
            android:textSize="17sp"
            android:background="@drawable/button_background_dark"
            android:textColor="@color/white"

            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc"
            android:text="@string/enteremail"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            app:layout_constraintBottom_toTopOf="@id/emailBox"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailBox"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:maxLines="1"
            android:hint="@string/email"
            android:textColorHint="#555555"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailBox"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnReset"
            android:text="@string/reset"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius = "20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintStart_toEndOf="@id/btnCancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>