<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="#6a5ae0"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/userr"
        android:contentDescription="Profile"/>


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wc"
        android:textColor="#fedd06"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Have a nice day message -->


    <TextView
        android:id="@+id/niceDayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="524dp"
        android:text="@string/name"
        android:textColor="#F6F5F0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/button_background_light">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:padding="16dp"
                android:rowCount="2"
                android:src="@drawable/button_background_light"
                android:useDefaultMargins="true">


                <LinearLayout
                    android:id="@+id/button_route_finder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:background="@drawable/background_btn_white"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/nearby" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/nearby"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/button_maps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/background_btn_white"
                    android:padding="16dp"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/route_finder" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <!-- Inbox -->
                <LinearLayout
                    android:id="@+id/button_inbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/background_btn_white"
                    android:padding="16dp"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/weather" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_marginTop="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/button_traffic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/background_btn_white"
                    android:padding="16dp"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_lrs" /> <!-- Replace with your icon -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lrs"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/button_mess"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/background_btn_white"
                    android:padding="16dp"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_messs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mess"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_marginTop="8dp" />
                </LinearLayout>


                <!-- Settings -->
                <LinearLayout
                    android:id="@+id/button_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/background_btn_white"
                    android:padding="16dp"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/menu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:layout_marginTop="8dp" />
                </LinearLayout>








            </GridLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>